--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="genarate_jokes">Genarate Jokes</string>
     <string name="jokes">Jokes</string>
     <string name="favourites">Favourites</string>
+    <string name="favourite_jokes">Favourite Jokes</string>
 </resources>
